fixed orders page item name word wrap

--- a/react-app/src/components/CheckOutPage/checkout.css
+++ b/react-app/src/components/CheckOutPage/checkout.css
@@ -36,6 +36,7 @@
     flex-direction: row;
     justify-content: center;
     width: 1200px;
+    padding-bottom: 100px;
 }
 
 .order-review {
@@ -59,7 +60,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    margin-left: 100px;
+    /* margin-left: 100px; */
 }
 
 .checkout-item-name-qty {
@@ -77,6 +78,10 @@
     font-size: 1.1em;
     margin-bottom: 10px;
     text-decoration: none;
+
+    inline-size: 400px;
+    overflow-wrap: break-word;
+
 }
 
 .checkout-item-name:hover {
